Fix sizing issues and overlap

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     height: 100vh;
     display: flex;
     flex-direction: column;
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .header,.footer{
     background-color: rgb(149, 161, 150);
@@ -41,6 +41,7 @@ body{
     transition: 0.3s;
     font-size: 40px;
     color: rgb(178, 184, 179);
+    max-height: 200px;
 }
 .addBookPromptButton:hover{
     background-color: rgb(221, 221, 221);
@@ -66,7 +67,8 @@ body{
 .promptContainer{
     display: flex;
     height: 100%;
-    overflow: hidden;
+    width: 100%;
+    overflow:;
     align-content: center;
 }
 input{
@@ -82,6 +84,10 @@ form{
     padding: 10px;
     justify-content: center;
     justify-content: space-evenly;
+    overflow: hidden;
+    overflow-wrap: normal;
+    height: 100%;
+    overflow-y: visible;
 }
 #closePrompt{
     display: flex;
